--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   <div class="pricing-column col-lg-4 col-md-6">
     <div class="card">
       <div class="card-header">
-        <h3>Labrado</h3>
+        <h3>Labrador</h3>
       </div>
       
       <div class="card-body">
